# test-cookiecutter

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: release.yml  tests.yml
test_cookiecutter_ali92hm/: __init__.py
tests/: test_test_cookiecutter.py  test_test_cookiecutter_ali92hm.py
tests/integration/: test_test_cookiecutter_ali92hm.py
tests/unit/: test_test_cookiecutter_ali92hm.py
