[project]
authors = [
  {name = "Ali Hajimirza (ali92hm)", email = "ali@alihm.net"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Operating System :: OS Independent",
]
dependencies = [
  # fill me
]
description = "Generated sample project from cookiecutter-pyproject"
keywords = [
  # fill me
]
license = {file = "LICENSE"}
maintainers = [
  {name = "Ali Hajimirza (ali92hm)", email = "ali@alihm.net"},
]
name = "test-cookiecutter-ali92hm"
readme = "README.md"
requires-python = ">=3.7"
version = "0.1.1"

[project.urls]
changelog = "github.com/ali92hm/test-cookiecutter/blob/master/CHANGELOG.md"
documentation = "github.com/ali92hm/test-cookiecutter/blob/master/README.md"
homepage = "https://github.com/ali92hm/test-cookiecutter"
repository = "github.com"

[project.entry-points]
test_cookiecutter = "test_cookiecutter_ali92hm.cli.entrypoint:main"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=57",
  "toml>=0.10",
  "wheel>=0.36",
]

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true

[tool.pytest.ini_options]
testpaths = [
  "tests",
]

[tool.black]
target-version = ['py39']

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_reexport = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_errors = true
module = "tests.*"
